# RealTimeSystem

./: Navigation_System_Explained.md  People_Landmark_System.md  README.md  Technical_Report_ORB-SLAM3.md
ORB_SLAM3_BACKWARD_ROAD_PERSON_TRACKING/: ._cluster_exit_detector.py  ._live_path_1756654906.txt  ._simple_exit_detector.py  .fixed_exit_detector.py.swp  CMakeLists.txt  CameraPosition.txt  MapPoints.txt  build_windows.bat  build_with_vcpkg.bat  cluster_exit_detector.py  convert_yolo_to_onnx.py  critical_fixes.patch  detection_debug.patch  exit_detector_visualizer.py  instrumentation.patch  performance_fix.patch  recorded_path_1756539848.txt  recorded_path_1756541358.txt  recorded_path_1756541402.txt  recorded_path_1756543571.txt  recorded_path_1756543777.txt  recorded_path_1756543923.txt  recorded_path_1756552891.txt  recorded_path_1756554402.txt  recorded_path_1756555511.txt  recorded_path_1756556583.txt  run_with_viewer.sh  simple_exit_detector.py  test_path_recording.txt  test_pathmatcher.cc
ORB_SLAM3_BACKWARD_ROAD_PERSON_TRACKING/Examples/Monocular/: .mono_rtmp_stream.cc.swp  Indoor_Drone.yaml  iPhone16Plus.yaml  iPhone16Plus.yaml.backup  mono_integration.cc  mono_integration_vv.cc  mono_kitti_headless.cc  mono_kitti_macos.cc  mono_kitti_macos_viewer.cc  mono_rtmp_stream.cc  mono_rtmp_stream_enhanced_hybrid.cc  mono_rtmp_stream_yolo.cc  mono_rtmp_stream_yolo_cpp.cc  mono_rtmp_stream_yolo_simple.cc  mono_tum_vi_macos.cc
ORB_SLAM3_BACKWARD_ROAD_PERSON_TRACKING/Examples/Monocular/Release/: CameraPosition.txt  MapPoints.txt  clustered_points_track_10_1756764824.txt  clustered_points_track_10_1756764826.txt  clustered_points_track_10_1756764830.txt  clustered_points_track_10_1756764832.txt  clustered_points_track_10_1756764834.txt  clustered_points_track_11_1756771522.txt  clustered_points_track_11_1756771524.txt  clustered_points_track_11_1756771526.txt  clustered_points_track_11_1756771528.txt  clustered_points_track_11_1756771530.txt  clustered_points_track_11_1756771541.txt  clustered_points_track_11_1756771543.txt  clustered_points_track_11_1756771545.txt  clustered_points_track_11_1756774242.txt  clustered_points_track_11_1756774244.txt  clustered_points_track_11_1756774246.txt  clustered_points_track_12_1756765349.txt  clustered_points_track_12_1756765351.txt  clustered_points_track_12_1756765354.txt  clustered_points_track_12_1756774251.txt  clustered_points_track_12_1756774271.txt  clustered_points_track_12_1756774275.txt  clustered_points_track_14_1756764860.txt  clustered_points_track_14_1756764862.txt  clustered_points_track_14_1756765424.txt  clustered_points_track_14_1756765426.txt  clustered_points_track_14_1756765428.txt  clustered_points_track_14_1756765430.txt  clustered_points_track_14_1756765432.txt  clustered_points_track_14_1756765436.txt  clustered_points_track_14_1756765438.txt  clustered_points_track_14_1756774287.txt  clustered_points_track_14_1756774289.txt  clustered_points_track_15_1756757939.txt  clustered_points_track_15_1756765444.txt  clustered_points_track_15_1756774751.txt  clustered_points_track_15_1756774753.txt  clustered_points_track_16_1756774315.txt  (+409 more)
ORB_SLAM3_BACKWARD_ROAD_PERSON_TRACKING/include/: ActivityDetectorCPP.h  Atlas.h  AudioGuide.h  DeviceManagerCPP.h  EnhancedHybridTrackerCPP.h  FaceRecognizerCPP.h  FrameDrawer_YOLO.h  ImuTypes.h  KeyFrame.h  KeyFrameDatabase.h  Map.h  MapDrawer.h  MapPoint.h  PathGuide.h  PathMatcher.h  PathOptimizer.h  PathRecorder.h  System.h  Tracking.h  VisualizerCPP.h  YOLODetectorCPP.h  YOLOInterface.h  ZoneAnalyticsCPP.h  orbslam3_export.h  unistd.h
ORB_SLAM3_BACKWARD_ROAD_PERSON_TRACKING/include/CameraModels/: KannalaBrandt8.h  Pinhole.h
ORB_SLAM3_BACKWARD_ROAD_PERSON_TRACKING/src/: ActivityDetectorCPP.cc  AudioGuide.cc  DeviceManagerCPP.cc  EnhancedHybridTrackerCPP.cc  FaceRecognizerCPP.cc  FrameDrawer_YOLO.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  PathGuide.cc  PathMatcher.cc  PathOptimizer.cc  PathRecorder.cc  System.cc  Tracking.cc  Viewer.cc  VisualizerCPP.cc  YOLODetectorCPP.cc  YOLOInterface.cc  ZoneAnalyticsCPP.cc  boost_exception_stub.cpp
Person_tracking_face_recognation/: clean_face_database.py  enhanced_hybrid_tracker_modular.py  face_recognizer.py  manual_face_setup.py  optimized_config.json  orbslam_bridge.py  orbslam_bridge_windows.py  requirements.txt
Person_tracking_face_recognation/modules/: __init__.py  activity_detector.py  device_manager.py  door_detector.py  visualization.py  zone_analytics.py
